openldap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openldap
  namespace: openldap
  labels:
    app.kubernetes.io/name: openldap

spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: openldap

  template:
    metadata:
      labels:
        app.kubernetes.io/name: openldap

    spec:
      serviceAccountName: openldap-sa

      containers:
      - name: openldap
        image: docker.io/osixia/openldap:1.5.0

        ports:
        - containerPort: 389
        - containerPort: 636

        volumeMounts:
        - name: ldap-bootstrap
          mountPath: /container/service/slapd/assets/config/bootstrap/ldif/custom

        - name: ldap-data
          mountPath: /var/lib/ldap

        - name: ldap-config
          mountPath: /etc/ldap/slapd.d

      volumes:
      - name: ldap-configmap
        configMap:
          name: ldap-bootstrap

      - name: ldap-bootstrap
        emptyDir: {}

      - name: ldap-data
        persistentVolumeClaim:
          claimName: openldap-data

      - name: ldap-config
        persistentVolumeClaim:
          claimName: openldap-config
