phpldapadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpldapadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: phpldapadmin

  template:
    metadata:
      labels:
        app.kubernetes.io/name: phpldapadmin

    spec:
      serviceAccountName: openldap-sa

      containers:
      - name: phpldapadmin
        image: osixia/phpldapadmin:0.9.0

        ports:
        - containerPort: 80
