phpldapadmin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpldapadmin-svc
  namespace: openldap
  labels:
    app.kubernetes.io/name: phpldapadmin
spec:
  selector:
    app.kubernetes.io/name: phpldapadmin

  ports:
  - name: http
    port: 80
    targetPort: 80
