phpldapadmin-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: phpldapadmin
spec:
  to:
    kind: Service
    name: phpldapadmin-svc

  port:
    targetPort: http

  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
